fix: text overflowing past bounds in chat modal with long unbroken word

--- a/static/less/overrides.less
+++ b/static/less/overrides.less
@@ -44,6 +44,7 @@
 		border: 1px solid @gray-lighter;
 		flex: 1;
 		height: 52px;
+		min-width: 50%;	// wut... https://stackoverflow.com/a/36150764/122353
 	}
 
 	[component="chat/input"] {
